Update: main - Diff report completed

--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -174,8 +174,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-574578" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+5</span>
-          <span class="d2h-lines-deleted">-6</span>
+          <span class="d2h-lines-added">+4</span>
+          <span class="d2h-lines-deleted">-5</span>
       </span>
     </span>
 </li>
@@ -8593,7 +8593,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if <del>AVAILABLE_SCHEDULES in </del>self.device:</span>
+            <span class="d2h-code-line-ctn">        if <del>AVAILABLE_SCHEDULES</del> in self.device:</span>
         </div>
     </td>
 </tr><tr>
@@ -11712,7 +11712,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if self.device<ins>[&quot;available_schedules&quot;] != [&quot;None&quot;]</ins>:</span>
+            <span class="d2h-code-line-ctn">        if <ins>&quot;available_schedules&quot;</ins> in self.device:</span>
         </div>
     </td>
 </tr><tr>
@@ -27873,13 +27873,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       11
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>38</del>.<del>3</del>&quot;],</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.38.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28017,13 +28017,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       10
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>37</ins>.<ins>4.1</ins>&quot;],</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.38.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -29891,7 +29891,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -29901,7 +29901,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -29991,7 +29991,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -30001,7 +30001,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -30091,7 +30091,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_temperature_offset(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_temperature_offset(</span>
         </div>
     </td>
 </tr><tr>
@@ -30101,7 +30101,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, value</span>
         </div>
     </td>
 </tr><tr>
@@ -30706,7 +30706,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>            self</ins>.<ins>coordinator.api, self.entity_description.key, self.device_id, value</ins></span>
+            <span class="d2h-code-line-ctn"><ins>            self</ins>.<ins>coordinator.api, self.device_id, self.entity_description.key, value</ins></span>
         </div>
     </td>
 </tr><tr>
