--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -10920,7 +10920,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if self.device[&quot;available_schedules&quot;] != [&quot;None&quot;]:</span>
+            <span class="d2h-code-line-ctn">        if &quot;available_schedules&quot; in self.device:</span>
         </div>
     </td>
 </tr><tr>
@@ -26324,7 +26324,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e0&#x2F;8a&#x2F;b52a039f503d6d076c6757c059bd6e9dba6cdd8c6a14dab5e4e8a64e07ef&#x2F;</del>plugwise<del>-</del>0.<del>31</del>.<del>5a4</del>.<del>tar.gz#plugwise==0.31.5a4</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e0&#x2F;8a&#x2F;b52a039f503d6d076c6757c059bd6e9dba6cdd8c6a14dab5e4e8a64e07ef&#x2F;</del>plugwise<del>-0.31.5a4.tar.gz#plugwise</del>==0.<del>31</del>.<del>5a4</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -26468,7 +26468,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==</ins>0.<ins>37</ins>.<ins>4</ins>.<ins>1</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>38</ins>.<ins>3</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28826,7 +28826,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -28836,7 +28836,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -28976,7 +28976,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -28986,7 +28986,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -29076,7 +29076,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_temperature_offset(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_temperature_offset(</span>
         </div>
     </td>
 </tr><tr>
@@ -29086,7 +29086,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, value</span>
         </div>
     </td>
 </tr><tr>
@@ -30051,7 +30051,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            self.coordinator.api, self.entity_description.key, <ins>self.device_id, </ins>value</span>
+            <span class="d2h-code-line-ctn">            self.coordinator.api, self.<ins>device_id, self.</ins>entity_description.key, value</span>
         </div>
     </td>
 </tr><tr>
