--- a/beta/diff.html
+++ b/beta/diff.html
@@ -174,8 +174,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-513496" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+6</span>
-          <span class="d2h-lines-deleted">-5</span>
+          <span class="d2h-lines-added">+5</span>
+          <span class="d2h-lines-deleted">-4</span>
       </span>
     </span>
 </li>
@@ -8473,7 +8473,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        if self.device<del>[&quot;available_schedules&quot;] != [&quot;None&quot;]</del>:</span>
+            <span class="d2h-code-line-ctn">        if <del>&quot;available_schedules&quot;</del> in self.device:</span>
         </div>
     </td>
 </tr><tr>
@@ -11572,7 +11572,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        if <ins>AVAILABLE_SCHEDULES in </ins>self.device:</span>
+            <span class="d2h-code-line-ctn">        if <ins>AVAILABLE_SCHEDULES</ins> in self.device:</span>
         </div>
     </td>
 </tr><tr>
@@ -27573,13 +27573,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del d2h-change">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       10
     </td>
-    <td class="d2h-del d2h-change">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>37</del>.<del>4.1</del>&quot;],</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.38.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27717,13 +27717,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
+    <td class="d2h-code-side-linenumber d2h-cntx">
       11
     </td>
-    <td class="d2h-ins d2h-change">
+    <td class="d2h-cntx">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>38</ins>.<ins>3</ins>&quot;],</span>
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.38.3&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28252,7 +28252,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -28262,7 +28262,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -28352,7 +28352,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_number_setpoint(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_number(</span>
         </div>
     </td>
 </tr><tr>
@@ -28362,7 +28362,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, number, value</span>
         </div>
     </td>
 </tr><tr>
@@ -28452,7 +28452,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        command=lambda api, number, dev_id, value: api.set_temperature_offset(</span>
+            <span class="d2h-code-line-ctn">        command=lambda api, dev_id, number, value: api.set_temperature_offset(</span>
         </div>
     </td>
 </tr><tr>
@@ -28462,7 +28462,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            number, dev_id, value</span>
+            <span class="d2h-code-line-ctn">            dev_id, value</span>
         </div>
     </td>
 </tr><tr>
@@ -29067,7 +29067,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>            self</del>.<del>coordinator.api, self.entity_description.key, self.device_id, value</del></span>
+            <span class="d2h-code-line-ctn"><del>            self</del>.<del>coordinator.api, self.device_id, self.entity_description.key, value</del></span>
         </div>
     </td>
 </tr><tr>
