Update: main - Diff report completed

--- a/beta/diff.html
+++ b/beta/diff.html
@@ -18640,7 +18640,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">                ): cv.boolean,</span>
+            <span class="d2h-code-line-ctn">                ): vol.All(cv.boolean),</span>
         </div>
     </td>
 </tr><tr>
