--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -15671,7 +15671,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">                ): cv.boolean,</span>
+            <span class="d2h-code-line-ctn">                ): vol.All(cv.boolean),</span>
         </div>
     </td>
 </tr><tr>
