Update: main - Diff report completed

--- a/beta/diff_battery_state.html
+++ b/beta/diff_battery_state.html
@@ -19104,7 +19104,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">BATTERY_STATE: Final = &quot;battery_state&quot;</span>
+            <span class="d2h-code-line-ctn">BATTERY_STATE: Final = &quot;low_battery&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -27254,7 +27254,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>1</del>.<del>1</del>.<del>0a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>1</del>.<del>1</del>.<del>0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27264,7 +27264,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>52</del>.<del>0a0</del>&quot;</span>
+            <span class="d2h-code-line-ctn">  &quot;<del>version</del>&quot;: &quot;<del>0</del>.<del>52</del>.<del>0a1</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -41176,7 +41176,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">      &quot;battery_state&quot;: {</span>
+            <span class="d2h-code-line-ctn">      &quot;low_battery&quot;: {</span>
         </div>
     </td>
 </tr><tr>
