Update: main - Diff report completed

--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -27059,7 +27059,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>1</del>.<del>2</del>.<del>0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.<del>2</del>.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27203,7 +27203,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>0</ins>.<ins>38</ins>.<ins>3</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.<ins>0</ins>.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
