--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -26964,7 +26964,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e0&#x2F;8a&#x2F;b52a039f503d6d076c6757c059bd6e9dba6cdd8c6a14dab5e4e8a64e07ef&#x2F;</del>plugwise<del>-0.31.5a4.tar.gz#plugwise</del>==0.<del>31</del>.<del>5a4</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted.org&#x2F;packages&#x2F;e0&#x2F;8a&#x2F;b52a039f503d6d076c6757c059bd6e9dba6cdd8c6a14dab5e4e8a64e07ef&#x2F;plugwise-</del>0.<del>31.5a4.tar.gz#plugwise==</del>0<del>.31.5a4</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27108,7 +27108,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<ins>38</ins>.<ins>3</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<ins>plugwise==1</ins>.0.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
