--- a/beta/diff.html
+++ b/beta/diff.html
@@ -27219,7 +27219,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>0</del>.<del>38</del>.<del>3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.<del>0</del>.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27363,7 +27363,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1</ins>.<ins>2</ins>.<ins>0</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.<ins>2</ins>.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
