Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,11 +12,11 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_comment.html'>Unified diff core:dev vs beta:origin/comment</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
-
-                        <li><a href='diff_model_id.html'>Unified diff core:dev vs beta:origin/model_id</a></li>
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
