--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -22754,7 +22754,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files</del>.<del>pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;plugwise-</del>0.<del>33.0a0.tar.gz#plugwise==</del>0<del>.33.0a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;</del>plugwise<del>-0</del>.<del>33</del>.<del>0a0.tar.gz#plugwise==</del>0<del>.33.0a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -22898,7 +22898,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<ins>plugwise==1</ins>.0.0&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==1</ins>.<ins>4</ins>.0&quot;],</span>
         </div>
     </td>
 </tr><tr>
