--- a/beta/diff_rework_runtime_updating.html
+++ b/beta/diff_rework_runtime_updating.html
@@ -29124,7 +29124,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==0.<del>38.3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>0</del>.<del>38</del>.<del>3</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -29268,7 +29268,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1.</ins>0.<ins>0</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1</ins>.<ins>4</ins>.<ins>0</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
