Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,7 +12,7 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_fix-test.html'>Unified diff core:dev vs beta:origin/fix-test</a></li>
+                        <li><a href='diff_improve-tests.html'>Unified diff core:dev vs beta:origin/improve-tests</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
