--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_improve_coord.html'>Unified diff core:dev vs beta:origin/improve_coord</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
