Update: main - Diff report completed

--- a/beta/diff_pw-v1.5.1.html
+++ b/beta/diff_pw-v1.5.1.html
@@ -28269,7 +28269,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;fa&#x2F;16&#x2F;d7b96e232b609277375c373487d30f67a3a5ef7bbf6d84d345c754b31314&#x2F;</del>plugwise<del>-1.5.1a3.tar.gz#plugwise</del>==1.5.<del>1a3</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;da&#x2F;de&#x2F;1fa67eb032c9ed30665050e8591f3be16b627cb33ba114ce48fad9191c9b&#x2F;</del>plugwise<del>-1.5.1a4.tar.gz#plugwise</del>==1.5.<del>1a4</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
